tests/baselines/reference/requiredInitializedParameter2.errors.txt
tests/cases/compiler/requiredInitializedParameter2.ts(6,5): error TS2421: Class member of type '(a: number, b: any) => void' is not assignable to implementing interface member of type '() => any'.


==== tests/cases/compiler/requiredInitializedParameter2.ts (1 errors) ====
    interface I1 {
        method();
    }
    
    class C1 implements I1 {
        method(a = 0, b) { }
        ~~~~~~
!!! error TS2421: Class member of type '(a: number, b: any) => void' is not assignable to implementing interface member of type '() => any'.
    }